fix: add edge-to-edge support (#916)